--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -29,5 +29,7 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Run tests
       run: mvn verify
+    - name: Build docker image
+      run: docker build --file Dockerfile --tag springboot_sample:$(date +%s)
 
 
