--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -10,8 +10,8 @@ name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - '!master'
+    branches-ignore:
+      - master
 
 jobs:
   build:
