--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Login to docker
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
-        username: testAccount00712
+        username: testaccount00712
         password: q1w2e3r4t5y6u7i8o9
     - name: Extract metadata (tags, labels) for Docker
       id: meta
