--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -30,22 +30,27 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Run tests
       run: mvn verify
-    - name: Login to docker
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        username: testaccount00712
-        password: q1w2e3r4t5y6u7i8o9
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-      with:
-        images: testaccount00712/springboot-sample
-    - name: Build and push Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+
+  docker:
+    uses: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to docker
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: testaccount00712
+          password: q1w2e3r4t5y6u7i8o9
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: testaccount00712/springboot-sample
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
 
