--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -35,6 +35,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
       - name: Login to docker
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
