--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -59,7 +59,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          ## tags: ${{ steps.meta.outputs.tags }}
+          tags: latest
+          labels: ${{ steps.meta.outputs.title }}
 
 
