--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -61,6 +61,6 @@ jobs:
           push: true
           ## tags: ${{ steps.meta.outputs.tags }}
           tags: latest
-          labels: ${{ steps.meta.outputs.title }}
+          labels: ${{ steps.meta.outputs.labels }}
 
 
