--- a/.github/workflows/on-every-push.yml
+++ b/.github/workflows/on-every-push.yml
@@ -59,8 +59,7 @@ jobs:
         with:
           context: .
           push: true
-          ## tags: ${{ steps.meta.outputs.tags }}
-          tags: test
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
 
