changed docker pushing jobs

--- a/.github/workflows/push-to-master.yml
+++ b/.github/workflows/push-to-master.yml
@@ -43,6 +43,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/springboot-sample:${{ vars.TAG }}
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/sample:${{vars.TAG}}
 
 
