--- a/.github/workflows/push-to-master.yml
+++ b/.github/workflows/push-to-master.yml
@@ -43,6 +43,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/sample:${{vars.TAG}}
+          tags: ${{secrets.DOCKER_USERNAME}}/sample:${{vars.TAG}}
 
 
