updated promotion logic

--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -13,6 +13,11 @@ jobs:
   retag_image:
     runs-on: ubuntu-latest
     steps:
+      - name: Login to docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       - name: Promote
-        run: docker tag ${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
+        run: docker tag ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
 
