--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{secrets.DOCKER_USERNAME}}/sample
       - name: Promote
         run: docker image tag ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
 
