--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           images: ${{secrets.DOCKER_USERNAME}}/sample
       - name: test
-        run: docker images
+        run: docker image ls ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}}
       - name: Promote
         run: docker image tag ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
 
