--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           images: ${{secrets.DOCKER_USERNAME}}/sample
       - name: test
+        uses: docker/build-push-action@v4
         run: docker image ls ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}}
       - name: Promote
         run: docker image tag ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
