--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
-      - name: test
-        run: docker images
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Promote
+        run:  docker buildx imagetools create -t ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{github.event.inputs.target}}
 
