--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -19,7 +19,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{secrets.DOCKER_USERNAME}}/sample
+          images: ${{secrets.DOCKER_USERNAME}}/sample:latest
       - name: Login to docker
         uses: docker/login-action@v2
         with:
