--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Promote
-        run:  docker buildx imagetools create -t ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{github.event.inputs.target}}
+        run:  docker tag ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
 
