--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
+      - name: cwd
+        run: ls
       - name: Promote
         run:  docker tag ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
 
