--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -20,8 +20,13 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
-      - name: docker images
+      - name: Pull image
         run: docker pull ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}}
-      - name: Promote
+      - name: Retag Image
         run:  docker tag ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.source}} ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
+      - name: Push retagged image
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
 
