--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Push retagged image
         uses: docker/build-push-action@v4
         with:
+          context: .
+          file: ./Dockerfile
           push: true
           tags: ${{secrets.DOCKER_USERNAME}}/sample:${{github.event.inputs.target}}
 
