--- a/.github/workflows/push-to-master.yml
+++ b/.github/workflows/push-to-master.yml
@@ -2,7 +2,7 @@ name: Merge to master
 on:
   push:
     branches:
-      - testing
+      - master
 
 jobs:
   build:
@@ -44,31 +44,6 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{secrets.DOCKER_USERNAME}}/sample:${{vars.TAG}}
-  cleanup:
-    needs: [build, docker]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Installation
-        run: gh extension install actions/gh-actions-cache
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Remove cache
-        run: |
-          REPO=${{ github.repository }}
-          BRANCH=${GITHUB_REF##*/}
-          echo "Fetching list of cache key"
-          cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH | cut -f 1 )
-          ## Setting this to not fail the workflow while deleting cache keys. 
-          set +e
-          echo "Deleting caches..."
-          for cacheKey in $cacheKeysForPR
-          do
-              gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
-          done
-          echo "Done"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
 
