--- a/.github/workflows/on-branch-delete.yml
+++ b/.github/workflows/on-branch-delete.yml
@@ -9,3 +9,21 @@ jobs:
       - name: Clean up
         run: |
           echo "Clean up for branch ${{ github.event.ref }}"
+          gh extension install actions/gh-actions-cache
+
+          REPO=${{ github.repository }}
+          BRANCH="${{ github.event.ref }}"
+
+          echo "Fetching list of cache key"
+          cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH | cut -f 1 )
+
+          ## Setting this to not fail the workflow while deleting cache keys. 
+          set +e
+            echo "Deleting caches..."
+            for cacheKey in $cacheKeysForPR
+                do
+                  gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
+                  done
+                echo "Done"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
