--- a/.github/workflows/on-branch-delete.yml
+++ b/.github/workflows/on-branch-delete.yml
@@ -2,28 +2,29 @@ name: On branch delete
 on: delete
 
 jobs:
-  clear-cache:
-    if: github.event.ref_type == 'branch'
+  cleanup:
     runs-on: ubuntu-latest
     steps:
-      - name: Clean up
-        run: |
-          echo "Clean up for branch ${{ github.event.ref }}"
-          gh extension install actions/gh-actions-cache
+      - name: Check out code
+        uses: actions/checkout@v3
 
+      - name: Cleanup
+        run: |
+          gh extension install actions/gh-actions-cache
+          
           REPO=${{ github.repository }}
-          BRANCH="${{ github.event.ref }}"
+          BRANCH="refs/pull/${{ github.event.pull_request.number }}/merge"
 
           echo "Fetching list of cache key"
           cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH | cut -f 1 )
 
           ## Setting this to not fail the workflow while deleting cache keys. 
           set +e
-            echo "Deleting caches..."
-            for cacheKey in $cacheKeysForPR
-                do
-                  gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
-                  done
-                echo "Done"
+          echo "Deleting caches..."
+          for cacheKey in $cacheKeysForPR
+          do
+              gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
+          done
+          echo "Done"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
