--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -15,16 +15,10 @@ on:
   # Triggers the workflow every 1 minute
   schedule:
     - cron: "*/1 * * * *"
-
-    # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "cron"
-  cron:
-    # The type of runner that the job will run on
+  say-hi:
+    name: Hello world
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Say hi
+        run: echo "Hello world"
