--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -16,9 +16,8 @@ on:
   schedule:
     - cron: "*/5 * * * *"
 jobs:
-  say-hi:
-    name: Hello world
+  cron:
     runs-on: ubuntu-latest
     steps:
-      - name: Say hi
-        run: echo "Hello world"
+      - name: Time
+        run: echo $NOW
