--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -19,5 +19,7 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
+      - name: Set current date as env variable
+        run: echo "NOW=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
       - name: Time
         run: echo $NOW
