--- a/.github/workflows/push-to-registry.yml
+++ b/.github/workflows/push-to-registry.yml
@@ -21,6 +21,12 @@ jobs:
         with:
           ref: ${{ inputs.branch-name }}
 
+      - name: Download JAR file
+        uses: actions/download-artifact@v2
+        with:
+          name: application-jar
+          path: target/*.jar
+
       - name: Login to docker
         uses: docker/login-action@v2
         with:
