--- a/.github/workflows/general-workflow.yml
+++ b/.github/workflows/general-workflow.yml
@@ -16,6 +16,9 @@ on:
 #  IS_PUSH_EVENT: ${{ github.event_name == 'push' }}
 #  IS_MAIN_BRANCH: ${{ github.ref == 'refs/heads/improvements' }}
 
+env:
+  JAR_UPLOAD: ${{ (github.ref == 'refs/heads/improvements' && github.event_name == 'push') || github.event_name == 'workflow_call' }}
+
 jobs:
   general-workflow:
     runs-on: ubuntu-latest
@@ -33,8 +36,15 @@ jobs:
       - name: Build & Run Tests
         run: mvn -B clean verify --file pom.xml
 
+      - name: Upload JAR File
+        if: ${{ env.JAR_UPLOAD == true }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: application-jar
+          path: target/*.jar
+
   push-to-dockerhub-from-master:
-    needs: [ general-workflow ]
+    needs: [ upload-jar ]
     uses: ./.github/workflows/push-to-registry.yml
     if: ${{ github.ref == 'refs/heads/improvements' && github.event_name == 'push' }}
     with:
