--- a/.github/workflows/general-workflow.yml
+++ b/.github/workflows/general-workflow.yml
@@ -42,6 +42,6 @@ jobs:
     uses: ./.github/workflows/push-to-registry.yml
     with:
       branch-name: ${{ github.ref }}
-      image-tag: ${{ IMAGE_TAG }}
+      image-tag: ${{ github.event_name == 'workflow_call' && inputs.image-tag || vars.TAG }}
 
 
