--- a/.github/workflows/general-workflow.yml
+++ b/.github/workflows/general-workflow.yml
@@ -37,7 +37,7 @@ jobs:
 
   push-to-dockerhub:
     name: Push Image to Registry
-    if: ${{ (github.ref == 'refs/heads/improvements' && github.event_name == 'push') || github.event_name == 'workflow_call' }}
+    if: ${{ (github.ref == 'refs/heads/' + github.repository.default_branch && github.event_name == 'push') || github.event_name == 'workflow_call' }}
     needs: [ general-workflow ]
     uses: ./.github/workflows/push-to-registry.yml
     with:
