Push to docker hub - Should not execute

--- a/.github/workflows/general-workflow.yml
+++ b/.github/workflows/general-workflow.yml
@@ -9,7 +9,7 @@ on:
         required: true
 
 env:
-  JAR_UPLOAD: ${{ (github.ref == 'refs/heads/improvements' && github.event_name == 'push') || github.event_name == 'workflow_call' }}
+  JAR_UPLOAD: ${{ (github.ref == 'refs/heads/master' && github.event_name == 'push') || github.event_name == 'workflow_call' }}
 
 jobs:
   general-workflow:
