--- a/.github/workflows/publish-from-branch.yml
+++ b/.github/workflows/publish-from-branch.yml
@@ -2,10 +2,6 @@ name: Publish Image From Branch
 on:
   workflow_dispatch:
     inputs:
-      BRANCH_NAME:
-        type: string
-        description: Enter Branch Name
-        required: true
       IMAGE_TAG:
         type: string
         description: Enter Image Tag
@@ -13,8 +9,8 @@ on:
 
 jobs:
   execute:
+    name: Trigger General Workflow
     uses: ./.github/workflows/general-workflow.yml
     with:
       IMAGE_TAG: ${{ github.event.inputs.IMAGE_TAG }}
-      BRANCH_NAME: ${{ github.event.inputs.BRANCH_NAME }}
     secrets: inherit
