--- a/.github/workflows/general-workflow.yml
+++ b/.github/workflows/general-workflow.yml
@@ -1,4 +1,3 @@
-#file: noinspection YAMLSchemaValidation
 name: General Workflow
 
 on:
@@ -11,15 +10,16 @@ on:
 
 env:
   IS_VIA_WORKFLOW_DISPATCH: ${{ github.event_name == 'workflow_dispatch' }}
-  IS_PUSH_TO_MASTER_EVENT: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }}
-
-pushToRegistryCondition: &IS_PUSH_TO_REGISTRY_ALLOWED ${{ env.IS_PUSH_TO_MASTER_EVENT == 'true' || env.IS_VIA_WORKFLOW_DISPATCH == 'true' }}
+  IS_PUSH_TO_DEFAULT_BRANCH: ${{ github.ref == github.event.repository.default_branch && github.event_name == 'push' }}
 
 jobs:
   general-workflow:
     name: General Workflow
     runs-on: ubuntu-latest
     steps:
+      - name: TO be removed
+        run: echo ${{ github.event.repository.default_branch }}
+        
       - name: Branch Checkout
         uses: actions/checkout@v4
 
@@ -34,7 +34,7 @@ jobs:
         run: mvn -B clean verify --file pom.xml
 
       - name: Upload JAR File
-        if: ${{ env.IS_VIA_WORKFLOW_DISPATCH == 'true' || env.IS_PUSH_TO_MASTER_EVENT == 'true' }}
+        if: ${{ env.IS_VIA_WORKFLOW_DISPATCH == 'true' || env.IS_PUSH_TO_DEFAULT_BRANCH == 'true' }}
         uses: actions/upload-artifact@v2
         with:
           name: application-jar
@@ -42,7 +42,7 @@ jobs:
 
   push-to-dockerhub:
     name: Push Image to Registry
-    if: *IS_PUSH_TO_REGISTRY_ALLOWED
+    if: ${{ (github.ref == github.event.repository.default_branch  && github.event_name == 'push') || github.event_name == 'workflow_dispatch' }}
     needs: [ general-workflow ]
     uses: ./.github/workflows/push-to-registry.yml
     with:
