--- a/.github/workflows/general-workflow.yml
+++ b/.github/workflows/general-workflow.yml
@@ -9,9 +9,8 @@ on:
         required: true
 
 env:
-  DEFAULT_REF: 'refs/heads/'${{ github.event.repository.default_branch }}
   IS_VIA_WORKFLOW_DISPATCH: ${{ github.event_name == 'workflow_dispatch' }}
-  IS_PUSH_TO_DEFAULT_BRANCH: ${{ github.ref == env.DEFAULT_REF && github.event_name == 'push' }}
+  IS_PUSH_TO_DEFAULT_BRANCH: ${{ github.ref == vars.DEFAULT_BRANCH && github.event_name == 'push' }}
 
 jobs:
   general-workflow:
@@ -43,7 +42,7 @@ jobs:
 
   push-to-dockerhub:
     name: Push Image to Registry
-    if: ${{ (github.ref == 'refs/heads/'${{ github.event.repository.default_branch }} && github.event_name == 'push') || github.event_name == 'workflow_dispatch' }}
+    if: ${{ (github.ref == vars.DEFAULT_BRANCH && github.event_name == 'push') || github.event_name == 'workflow_dispatch' }}
     needs: [ general-workflow ]
     uses: ./.github/workflows/push-to-registry.yml
     with:
