Workflow names fix

--- a/.github/workflows/general-workflow.yml
+++ b/.github/workflows/general-workflow.yml
@@ -40,7 +40,7 @@ jobs:
   publish-image:
     name: Publish Image
     if: ${{ (github.ref == vars.DEFAULT_BRANCH && github.event_name == 'push') || github.event_name == 'workflow_dispatch' }}
-    needs: [ general-workflow ]
+    needs: [ execute ]
     uses: ./.github/workflows/push-to-registry.yml
     with:
       IMAGE_TAG: ${{ github.event_name == 'workflow_dispatch' && inputs.IMAGE_TAG || vars.TAG }}
